--- a/packaging/pom.xml
+++ b/packaging/pom.xml
@@ -23,7 +23,7 @@
   <parent>
     <groupId>org.exoplatform.addons</groupId>
     <artifactId>spaces-administration-extension</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
   </parent>  
 
   <modelVersion>4.0.0</modelVersion>
