--- a/war/pom.xml
+++ b/war/pom.xml
@@ -21,7 +21,7 @@
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <parent>
-    <groupId>org.exoplatform.addons</groupId>
+    <groupId>org.exoplatform.addons.spaces-administration</groupId>
     <artifactId>spaces-administration-extension</artifactId>
     <version>1.0.0</version>
   </parent>
