--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
 
   <groupId>org.exoplatform.addons.spaces-administration</groupId>
   <artifactId>spaces-administration-extension</artifactId>
-  <version>1.0.0</version>
+  <version>1.1.0-SNAPSHOT</version>
   
   <name>Spaces Administration Extension</name>
   <packaging>pom</packaging>
