--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
       <dependency>
         <groupId>org.exoplatform.platform</groupId>
         <artifactId>platform</artifactId>
-        <version>4.1-M2</version>
+        <version>4.2.x-plf-upg-juzu-1.0-SNAPSHOT</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
