--- a/portlet/pom.xml
+++ b/portlet/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.exoplatform.addons.spaces-administration</groupId>
     <artifactId>spaces-administration-extension</artifactId>
-    <version>1.1.1-SNAPSHOT</version>
+    <version>1.1.x-SNAPSHOT</version>
   </parent>
   <artifactId>spaces-administration-portlet</artifactId>
   <name>Spaces Administration Portlet</name>
