--- a/war/pom.xml
+++ b/war/pom.xml
@@ -23,7 +23,7 @@
   <parent>
     <groupId>org.exoplatform.addons.spaces-administration</groupId>
     <artifactId>spaces-administration-extension</artifactId>
-    <version>1.1.x-SNAPSHOT</version>
+    <version>1.1.1</version>
   </parent>
 	
   <modelVersion>4.0.0</modelVersion>
