--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
       <dependency>
         <groupId>org.exoplatform.platform</groupId>
         <artifactId>platform</artifactId>
-        <version>4.2.0-M2</version>
+        <version>4.3.0-RC1-1</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
