--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
 
   <groupId>org.exoplatform.addons.spaces-administration</groupId>
   <artifactId>spaces-administration-extension</artifactId>
-  <version>1.1.x-SNAPSHOT</version>
+  <version>1.1.3</version>
   
   <name>Spaces Administration Extension</name>
   <packaging>pom</packaging>
@@ -40,7 +40,7 @@
     <connection>scm:git:git://github.com/exo-addons/spaces-administration.git</connection>
     <developerConnection>scm:git:git@github.com:exo-addons/spaces-administration.git</developerConnection>
     <url>https://github.com/exo-addons/spaces-administration</url>
-    <tag>HEAD</tag>
+    <tag>1.1.3</tag>
   </scm>
 
   <dependencyManagement>
