--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
       <dependency>
         <groupId>org.exoplatform.platform</groupId>
         <artifactId>platform</artifactId>
-        <version>4.2.x-SNAPSHOT</version>
+        <version>4.4.0-RC01</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -57,7 +57,6 @@
   </dependencyManagement>
 
   <modules>
-    <module>config</module>
     <module>services</module>
     <module>war</module>
     <module>portlet</module>
