--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
   </scm>
 
   <properties>
-    <org.exoplatform.platform.version>4.4.x-SNAPSHOT</org.exoplatform.platform.version>
+    <org.exoplatform.platform.version>4.4.4</org.exoplatform.platform.version>
   </properties>
 
   <dependencyManagement>
