--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
   <parent>
     <artifactId>addons-parent-pom</artifactId>
     <groupId>org.exoplatform.addons</groupId>
-    <version>7</version>
+    <version>8</version>
   </parent>
 
   <groupId>org.exoplatform.addons.spaces-administration</groupId>
@@ -44,7 +44,7 @@
   </scm>
 
   <properties>
-    <org.exoplatform.platform.version>4.4.x-SNAPSHOT</org.exoplatform.platform.version>
+    <org.exoplatform.platform.version>5.0.0</org.exoplatform.platform.version>
   </properties>
 
   <dependencyManagement>
